--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -12,8 +12,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",    
+    "test": "node --test"
   },
   "dependencies": {
     "cors": "^2.8.5",
