--- a/part7/ultimate-hooks/package.json
+++ b/part7/ultimate-hooks/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "query-anecdotes",
+  "name": "ultimate-hooks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,13 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "node server.js"
+    "server": " npx json-server --watch db.json --port 3005",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.65.1",
-    "axios": "^1.4.0",
-    "json-server": "^0.17.4",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -21,13 +19,11 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.1",
+    "json-server": "^0.17.4",
     "vite": "^4.4.5"
   }
 }
