--- a/part8/graphql-library/package.json
+++ b/part8/graphql-library/package.json
@@ -16,7 +16,10 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
-    "graphql": "^16.10.0"
+    "dotenv": "^16.4.7",
+    "graphql": "^16.10.0",
+    "mongoose": "^8.10.0",
+    "mongoose-unique-validator": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
